--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center">
   <h1>掲示板一覧</h1>
   <div class="ms-auto boards__linkBox">
-    <a href="/boards/new" class="btn btn-outline-dark">新規作成</a>
+    <%= link_to '新規作成', new_board_path, class: 'btn btn-outline-dark' %>
   </div>
 </div>
 <table class="table table-hover boards__table">
@@ -12,6 +12,8 @@
       <th>作成者</th>
       <th>作成日時</th>
       <th>更新日時</th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -22,6 +24,8 @@
         <td><%= board.author_name %></td>
         <td><%= board.created_at.to_s(:datetime_jp) %></td>
         <td><%= board.updated_at.to_s(:datetime_jp) %></td>
+        <td><%= link_to '詳細', board, class: 'btn btn-outline-dark' %></td> <%# 第2引数にオブジェクトを指定することで詳細画面へのパスが生成される %>
+        <td><%= link_to '削除', board, class: 'btn btn-outline-dark', method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
