Add: Commentモデルのバリデーション設定とエラーメッセージの追加 Refactor: エラーメッセージのフォームをパーシャル化

--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,12 +1,6 @@
-<% if flash[:error_message] %>
-  <div class="alert alert-danger">
-    <ul>
-      <% flash[:error_message].each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+<%= render 'shared/error_messages' %>
+
+
 <%= form_with model: board do |form| %>
   <div class="mb-3">
     <%= form.label :author_name, '名前' %>
