--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= render 'header' %>
     <div class="container">
       <%= yield %> <%# 各ページのビューがyield部分に展開される %>
     </div>
