Add: ログインユーザーの取得とマイページの作成 Refactor: form_withとSessionsControllerの記述を修正

--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,19 +1,19 @@
 <%= render 'shared/error_messages' %>
 
 <%= form_with model: board do |f| %>
-  <div class="form-group">
+  <div class="mb-3">
     <%= f.label :author_name, '名前' %>
     <%= f.text_field :author_name, class: 'form-control' %>
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <%= f.label :title, 'タイトル' %>
     <%= f.text_field :title, class: 'form-control' %>
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <%= f.label :body, '本文' %>
     <%= f.text_area :body, class: 'form-control', rows: '10' %>
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <span>タグ</span>
     <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
       <div class="form-check">
