--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,11 +4,11 @@
   <p class="p-comment__formTitle">コメント記入</p>
   <%= form_with model: comment do |f| %>
     <%= f.hidden_field :board_id %>
-    <div class="form-group">
+    <div class="mb-3">
       <%= f.label :name, '名前' %>
       <%= f.text_field :name, class: 'form-control' %>
     </div>
-    <div class="form-group">
+    <div class="mb-3">
       <%= f.label :comment, 'コメント' %>
       <%= f.text_area :comment, class: 'form-control', rows: 4 %>
     </div>
