--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,15 @@
 <%= render 'shared/error_messages' %>
 
 <%= form_with model: user do |f| %>
-  <div class="form-group">
+  <div class="mb-3">
     <%= f.label :name, 'ユーザー名' %>
     <%= f.text_field :name, class: 'form-control' %>
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <%= f.label :password, 'パスワード' %>
     <%= f.password_field :password, class: 'form-control' %>
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <%= f.label :password_confirmation, 'パスワード（確認）' %>
     <%= f.password_field :password_confirmation, class: 'form-control' %>
   </div>
